fix footer to not to cause scrollbars

--- a/css/site.css
+++ b/css/site.css
@@ -186,12 +186,15 @@ td#phoneCell {
     right: 0;
     bottom: 0;
     left: 0;
-    padding: 15px;
     background-color: #192531;
-    max-width: 1025px;
-    margin: auto;
-    display: flex;
     width: 100%; /* this is to fix margin: auto in ie*/
+    margin: auto;
+    max-width: 1025px;
+  }
+
+  .footer > div {
+      display: flex;
+      padding: 15px;
   }
 
   #contactGroup {
@@ -199,18 +202,23 @@ td#phoneCell {
       text-align: center;
   }
 
+  #contactGroup a{
+    display: flex;
+    text-align: center;
+    padding: 5px 15px;
+  }
+
   #footerCopyright {
       flex: 1;
       color: white;
-      float: left;
-      margin-left: 5px;
-      margin-right: 5px;
       font-size: 80%;
+      padding: 5px 15px;
   }
 
-  @media screen and (max-width: 640px) {
-      .footer{
+  @media screen and (max-width: 780px) {
+      .footer > div {
           flex-direction: column;
+          padding: 0;
       }
 
       #content {
